# digitalhub-2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  alembic.ini  docker-compose.yml  install.sh  manage.sh  pyproject.toml  requirements.txt  update.sh
bot/: __init__.py  main.py
bot/core/: __init__.py  bot.py  logging.py
bot/handlers/: __init__.py
bot/handlers/admin/: __init__.py
bot/handlers/user/: __init__.py  start.py
bot/keyboards/: __init__.py  main_menu.py
bot/middlewares/: __init__.py  auth.py  throttling.py
bot/states/: __init__.py
docker/: Dockerfile.bot  Dockerfile.web  nginx.conf.template
integrations/: __init__.py
integrations/gateways/: __init__.py  base.py
integrations/xui/: __init__.py  client.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: __init__.py  create_admin.py
shared/: __init__.py  config.py  database.py  redis.py
shared/models/: __init__.py  catalog.py  enums.py  mixins.py  order.py  support.py  types.py  user.py
shared/repositories/: __init__.py  base.py  user.py
shared/services/: __init__.py  user.py
web/: __init__.py  auth.py  dependencies.py  main.py  templating.py
web/routers/: __init__.py  auth.py  dashboard.py
web/static/: style.css
web/templates/: base.html  dashboard.html  login.html
