[project]
name = "appstore-bot"
version = "1.0.0"
description = "Multi-product Telegram sales bot (Apple ID + VPN) with a web admin panel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.17.0",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "jinja2==3.1.4",
    "python-multipart==0.0.17",
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "redis==5.2.0",
    "httpx==0.28.0",
    "apscheduler==3.10.4",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]==3.3.0",
    "aiosqlite==0.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.2",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["bot", "web", "shared", "integrations"]
